tests/snapshots/examples_fixtures/performance__complexity_scaling.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/performance/complexity_scaling.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/performance/complexity_scaling.flx:12:44
   |
12 |             bench_list_head(lst, reps - 1, acc + first(lst))
   |                                            ^^^^^^^^^^^^^^^^
   |                                            ---------------- this expression has type `Int`

   |                                            ---------------- this type mismatch is reported here

Note:
  expected type: Option<_>
  found type: Int
  the conflicting types meet at this expression

Help:
  Wrap this value in `Some(...)` or return `None`.


Note: Downstream Errors Suppressed

I hid 9 later-stage diagnostics (9 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
== stdout ==
<not executed>
